# bnglrpython

2026-Feb-Bosch/Day02/: d21.py  d22.py  d23.py  d28.py  d29.py  ht_math_del.py  sample.py  test.py
2026-Feb-Bosch/Day03/: d31.py  d34.py  d36_1.py  d37.py
Day02/: classmodule.py  d24.py  d25.py  d26.py  d27.py  test.py
Day02/my_package/: __init__.py
Day03/: act1.py  d32.py  d33.py  d35.py  d36.py  d36_2.py  d38.py
Day04/: students.json  t1.py  t2.py  t3.py  t4.py  t5.py  t6.py  t7.py  t8.py  t8_2.py
Day05/: boschtest.py  dvd.xml  example.txt  harmeet.py  ht_test.py  t51.py  t52.py  t53.py  t54.py  t55.py  t56.py  t56_2.py  t56_3.py  t57.py
Day06/: s1.py  s2.py  s3.py  s3_2.py  s4.py  s5.py  s6.py
Day06/assessment/: Abhishek.txt  Abhishek1.txt  Reema.txt
Project from PAX/: Inst.txt  Stock_system.py  insructions.txt
Project from PAX/Bhargavi/: Main.py
Project from PAX/Bhargavi_CPP/IncomeExpenseTracker/IncomeExpenseTracker/: CMakeLists.txt
Project from PAX/Bhargavi_CPP/IncomeExpenseTracker/IncomeExpenseTracker/include/Tracker/: Tracker.hpp  Transaction.hpp  utils.hpp
Project from PAX/Bhargavi_CPP/IncomeExpenseTracker/IncomeExpenseTracker/src/: Tracker.cpp  main.cpp
Project from PAX/CAPSTONE_Ayub/: main.py
Project from PAX/Kavya_Capstone_Project/: test_portfolio.py
Project from PAX/Reetoja_Gupta/: data.json  main.py  models.py  services.py  test_portfolio.py
Project from PAX/Reetoja_Gupta_CPP/: Aggregator.h  FilterEngine.h  ReportGenerator.h  TransactionManager.h  main.cpp  transaction.h
Project from PAX/Satheesh/: project_1.py  user.txt  (+1 more)
(+47 files in other folders)
